--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
 envlist =
-    python3.6
-    python3.7
+    ; python3.6
+    ; python3.7
     python3.8
-    flake8
+    ; flake8
 
 [testenv]
 deps = pipenv
