--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ coverage = "*"
 sphinx = "*"
 sphinx-rtd-theme = "*"
 sphinx-autobuild = "*"
+autopep8 = "*"
 
 [packages]
 google-cloud-firestore = "*"
